# finance

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  PROJECT_REVIEW.md  PROJECT_REVIEW_TLDR.md  README.md  eslint.config.js  fly.toml  package-lock.json  package.json  playwright.config.js  render.yaml  server.js
docs/: AUDIT_FIXES_2026-06-12.md  DEEP_AUDIT_2026-06-11.md  DEEP_AUDIT_2026-06-12.md  PRODUCT_PROPOSALS.md  PROJECT_AUDIT_2026-06-10.md  UI_UX_AUDIT.md  ci.yml.proposed
e2e/: app.spec.js
public/: app.js  demo-data.json  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: generate-demo-data.mjs
src/: ai.js  allocation.js  auth.js  backups.js  categories.js  dataversion.js  db.js  insights.js  log.js  middleware.js  monobank.js  offsite.js  pricecheck.js  prices.js  rates.js  reminders.js  restore.js  (+5 more)
stock_screener/: .coverage  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
stock_screener/.github/workflows/: ci.yml
stock_screener/config/: default_config.yaml
stock_screener/docs/: architecture.md
stock_screener/sample_outputs/: stock_screen_charts.html  stock_screen_results.xlsx
stock_screener/src/stock_screener/: cli.py  config.py  models.py  pipeline.py
stock_screener/src/stock_screener/exporters/: charts.py  excel.py
stock_screener/src/stock_screener/providers/: base.py  yahoo.py
stock_screener/src/stock_screener/screening/: filters.py  scoring.py
stock_screener/src/stock_screener/utils/: cache.py  logging.py
stock_screener/tests/: test_filters.py  test_pipeline.py  test_scoring.py
(+23 files in other folders)
