[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-stock-screener"
version = "2.0.0"
description = "Production-quality async financial stock screener for investment analysts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["yfinance>=0.2.54", "pandas>=2.2.0", "numpy>=1.26.0", "openpyxl>=3.1.0", "plotly>=5.24.0", "pyyaml>=6.0.0", "tenacity>=8.3.0", "rich>=13.7.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.6.0", "black>=24.0.0", "pre-commit>=3.7.0"]

[project.scripts]
stock-screener = "stock_screener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=stock_screener --cov-report=term-missing"
